Fix findbugs/sonar violations in sfc-openflow-renderer
- Method call passes null for non-null parameter
- Method ignores exceptional return value
- Consider using Locale parameterized version of invoked method
- Field isn't final but should be
- Method invokes toString() method on a String
- Inefficient use of keySet iterator instead of entrySet iterator
- Should be a static inner class
- Private method is never called
- Method invokes inefficient Number constructor; use static valueOf instead
- Dead store to local variable
- Write to static field from instance method
- Unread public/protected field
- Field not initialized in constructor but dereferenced without null check
- Useless object created
- Collapsible "if" statements should be merged

Also enabled findbugs enforcement.

Change-Id: If2f867adce5b7a65984c889c0dbb099b7af7ae53
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>